force-app/main/default/objects/Account/fields/HMO__c.field-meta.xml
<CustomField>
    <fullName>HMO__c</fullName>
    <description># Lives covered by a HMO offering.  Used by MCO and MCO Plan accounts.</description>
    <label>HMO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>