force-app/main/default/objects/Account/fields/HMO_Market_Shr__c.field-meta.xml
<CustomField>
    <fullName>HMO_Market_Shr__c</fullName>
    <description>Market Share for # Lives in the HMO offering at this account.  Used by MCO and MCO Plan accounts.</description>
    <label>HMO Market Shr</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>