force-app/main/default/objects/Account/fields/HMO_POS__c.field-meta.xml
<CustomField>
    <fullName>HMO_POS__c</fullName>
    <description># Lives covered by a HMO/POS offering.  Used by MCO and MCO Plan accounts.</description>
    <label>HMO/POS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>