force-app/main/default/objects/Account/fields/Hospital_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Type_vod__c</fullName>
    <description>Identify a hospital is a General Practitioner or a Hospital.</description>
    <label>Hospital Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>