force-app/main/default/objects/Account/fields/ID2_vod__c.field-meta.xml
<CustomField>
    <fullName>ID2_vod__c</fullName>
    <description>The ID2_vod field acts as a secondary identifier to link Accounts to Sales Data via the Analytics application.  This ID should be leveraged in the case that a Physician has both distribution and script data loaded.</description>
    <label>ID2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>