force-app/main/default/objects/Account/fields/ID_vod__c.field-meta.xml
<CustomField>
    <fullName>ID_vod__c</fullName>
    <description>The ID field acts as the identifier to link Accounts to Sales Data via the Analytics application.</description>
    <label>ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>