force-app/main/default/objects/Account/fields/Inventory_Monitoring_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Monitoring_Type_vod__c</fullName>
    <description>List of Inventory Monitoring Types available for the Account. This field must contain a value from the Default_Inventory_Monitoring_Type_vod__c field. If None_vod is selected, then no Inventory Monitoring activities will be allowed for the selected account</description>
    <label>Inventory Monitoring Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None_vod</fullName>
            </value>
            <value>
                <fullName>Inventory_Monitoring_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>