force-app/main/default/objects/Account/fields/Investigator_vod__c.field-meta.xml
<CustomField>
    <fullName>Investigator_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this professional is a clinical trials investigator.  Used by person accounts.</description>
    <label>Investigator?</label>
    <type>Checkbox</type>
</CustomField>