force-app/main/default/objects/Account/fields/KOL_vod__c.field-meta.xml
<CustomField>
    <fullName>KOL_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this professional is a Key Opinion Leader.  Used by person accounts.</description>
    <label>KOL?</label>
    <type>Checkbox</type>
</CustomField>