force-app/main/default/objects/Account/fields/Language_vod__c.field-meta.xml
<CustomField>
    <fullName>Language_vod__c</fullName>
    <description>Language_vod holds the preferred Language for the Account. Used in Approved Email to drive the preferred language functionality.</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>