force-app/main/default/objects/Account/fields/Master_Align_Id_vod__c.field-meta.xml
<CustomField>
    <fullName>Master_Align_Id_vod__c</fullName>
    <description>Globally unique identifier for this object. This Id is managed by Align</description>
    <label>Master Align Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>