force-app/main/default/objects/Account/fields/ME__c.field-meta.xml
<CustomField>
    <fullName>ME__c</fullName>
    <description>Medical Education #.  Used by person accounts.</description>
    <label>ME #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>