force-app/main/default/objects/Account/fields/Medicaid__c.field-meta.xml
<CustomField>
    <fullName>Medicaid__c</fullName>
    <description># Lives covered by Medicaid at this account.  Used by MCO and MCO Plan accounts.</description>
    <label>Medicaid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>