force-app/main/default/objects/Account/fields/Medical_Expenses_PMPM__c.field-meta.xml
<CustomField>
    <fullName>Medical_Expenses_PMPM__c</fullName>
    <description>Per patient per month medical expenses.  Used by MCO and MCO Plan accounts.</description>
    <label>Medical Expenses (PMPM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>