force-app/main/default/objects/Account/fields/Medical_Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Medical_Loss_Ratio__c</fullName>
    <description>Medical Loss Ratio.  Used by MCO and MCO Plan accounts.</description>
    <label>Medical Loss Ratio</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>