force-app/main/default/objects/Account/fields/Medicare__c.field-meta.xml
<CustomField>
    <fullName>Medicare__c</fullName>
    <description># Lives covered by Medicare at this account.  Used by MCO and MCO Plan accounts.</description>
    <label>Medicare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>