force-app/main/default/objects/Account/fields/Middle_vod__c.field-meta.xml
<CustomField>
    <fullName>Middle_vod__c</fullName>
    <description>Middle name of the professional (Person Account).</description>
    <label>Middle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>