force-app/main/default/objects/Account/fields/Mobile_ID_vod__c.field-meta.xml
<CustomField>
    <fullName>Mobile_ID_vod__c</fullName>
    <description>System field used by mobile products to aid synchronization.</description>
    <externalId>true</externalId>
    <label>Mobile ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>