force-app/main/default/objects/Account/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Account Model.  Used by MCO and MCO Plan accounts.</description>
    <label>Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>