force-app/main/default/objects/Account/fields/NET_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>NET_Account_Type__c</fullName>
    <label>Network Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pharmacy, Long Term Care Pharmacy Provider</fullName>
            </value>
            <value>
                <fullName>Medical School, Paramedic/EMT</fullName>
            </value>
            <value>
                <fullName>Residency Program, Residency</fullName>
            </value>
            <value>
                <fullName>Organization, HMO/Insurance</fullName>
            </value>
            <value>
                <fullName>Organization, Respiratory Therapy Group</fullName>
            </value>
            <value>
                <fullName>Managed Care, Assistance Programs</fullName>
            </value>
            <value>
                <fullName>Organization, Hospital Based NH/LTC</fullName>
            </value>
            <value>
                <fullName>Organization, Animal Welfare/Control</fullName>
            </value>
            <value>
                <fullName>Medical School, Veterinary</fullName>
            </value>
            <value>
                <fullName>Organization, Group Purchasing Organization</fullName>
            </value>
            <value>
                <fullName>Medical School, Optometric</fullName>
            </value>
            <value>
                <fullName>Organization, Clinic</fullName>
            </value>
            <value>
                <fullName>Medical School, Other</fullName>
            </value>
            <value>
                <fullName>Pharmacy, Compounding Pharmacy</fullName>
            </value>
            <value>
                <fullName>Managed Care, Physician Hospital Org</fullName>
            </value>
            <value>
                <fullName>Organization, Cystic Fibrosis Center</fullName>
            </value>
            <value>
                <fullName>Organization, Prison</fullName>
            </value>
            <value>
                <fullName>Managed Care, PPO</fullName>
            </value>
            <value>
                <fullName>Prison, Other</fullName>
            </value>
            <value>
                <fullName>Pharmacy, Hospital</fullName>
            </value>
            <value>
                <fullName>Organization, Alternative Medicine Group</fullName>
            </value>
            <value>
                <fullName>Medical Board, Corporate Office</fullName>
            </value>
            <value>
                <fullName>Managed Care, Other Managed Care</fullName>
            </value>
            <value>
                <fullName>Organization, Corporate (no public access)</fullName>
            </value>
            <value>
                <fullName>Home Health Care Agencies, Other</fullName>
            </value>
            <value>
                <fullName>Managed Care, Physician Hospital Organization</fullName>
            </value>
            <value>
                <fullName>Pharmacy, Corporate Office</fullName>
            </value>
            <value>
                <fullName>Organization, Government</fullName>
            </value>
            <value>
                <fullName>Organization, Occupational Therapy Group</fullName>
            </value>
            <value>
                <fullName>Managed Care, Management Service Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>