force-app/main/default/objects/Account/fields/NET_External_Id__c.field-meta.xml
<CustomField>
    <fullName>NET_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Network Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>