force-app/main/default/objects/Account/fields/Net_Income_Loss_000__c.field-meta.xml
<CustomField>
    <fullName>Net_Income_Loss_000__c</fullName>
    <description>Net Income Loss in thousands.  Used by MCO and MCO Plan accounts.</description>
    <label>Net Income (Loss) (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>