force-app/main/default/objects/Account/fields/NET_TIN__c.field-meta.xml
<CustomField>
    <fullName>NET_TIN__c</fullName>
    <label>Network TIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>