force-app/main/default/objects/Account/fields/No_Orders_vod__c.field-meta.xml
<CustomField>
    <fullName>No_Orders_vod__c</fullName>
    <description>If set to Yes_vod,  no orders of any type can be placed against the account.</description>
    <label>No Orders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No_vod</fullName>
                <default>true</default>
                <label>No_vod</label>
            </value>
            <value>
                <fullName>Yes_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>