force-app/main/default/objects/Account/fields/NPI_vod__c.field-meta.xml
<CustomField>
    <fullName>NPI_vod__c</fullName>
    <description>National Provider Identifier.</description>
    <label>NPI #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>