force-app/main/default/objects/Account/fields/Offerings__c.field-meta.xml
<CustomField>
    <fullName>Offerings__c</fullName>
    <description>Picklist of insurance offerings.  Used by MCO and MCO Plan accounts.</description>
    <label>Offerings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>HRA</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>