force-app/main/default/objects/Account/fields/Order_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_vod__c</fullName>
    <description>Types of orders allowed to be placed against the account. If no default is specified, the first value in the Account.Order_Type_vod list will be used as the default type.</description>
    <label>Order Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct_vod</fullName>
            </value>
            <value>
                <fullName>Transfer_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>