force-app/main/default/objects/Account/fields/Payer_Id_vod__c.field-meta.xml
<CustomField>
    <fullName>Payer_Id_vod__c</fullName>
    <description>Payer Id for Formulary for the Rep</description>
    <label>Payer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>