force-app/main/default/objects/Account/fields/PDRP_Opt_Out_Date_vod__c.field-meta.xml
<CustomField>
    <fullName>PDRP_Opt_Out_Date_vod__c</fullName>
    <description>Date the professional opted out of the PDRP (AMA) program.  Used for person accounts.</description>
    <label>PDRP Opt-Out Date</label>
    <type>Date</type>
</CustomField>