force-app/main/default/objects/Account/fields/PDRP_Opt_Out_vod__c.field-meta.xml
<CustomField>
    <fullName>PDRP_Opt_Out_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the professional opted out of the PDRP (AMA) program.  Used for person accounts.</description>
    <label>PDRP Opt-Out</label>
    <type>Checkbox</type>
</CustomField>