force-app/main/default/objects/Account/fields/Photo_vod__c.field-meta.xml
<CustomField>
    <fullName>Photo_vod__c</fullName>
    <description>Field to store photo for Account Profile</description>
    <label>Photo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>