force-app/main/default/objects/Account/fields/PMPM_Income_Loss_000__c.field-meta.xml
<CustomField>
    <fullName>PMPM_Income_Loss_000__c</fullName>
    <description>Per Patient Per Month Income Loss.  Used by MCO and MCO Plan accounts.</description>
    <label>PMPM Income (Loss) (000)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>