force-app/main/default/objects/Account/fields/PPO__c.field-meta.xml
<CustomField>
    <fullName>PPO__c</fullName>
    <description># Lives covered by a PPO offering.  Used by MCO and MCO Plan accounts.</description>
    <label>PPO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>