force-app/main/default/objects/Account/fields/PPO_POS__c.field-meta.xml
<CustomField>
    <fullName>PPO_POS__c</fullName>
    <description># Lives covered by a PPO/POS offering.  Used by MCO and MCO Plan accounts.</description>
    <label>PPO/POS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>