force-app/main/default/objects/Account/fields/Practice_at_Hospital_vod__c.field-meta.xml
<CustomField>
    <fullName>Practice_at_Hospital_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox if the group practice at a hospital.  Used in HMS data load.</description>
    <label>Practice at Hospital?</label>
    <type>Checkbox</type>
</CustomField>