force-app/main/default/objects/Account/fields/Preferred_Name_vod__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name_vod__c</fullName>
    <description>Preferred name of professional (Person Account).</description>
    <label>Preferred Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>