force-app/main/default/objects/Account/fields/Primary_Parent_vod__c.field-meta.xml
<CustomField>
    <fullName>Primary_Parent_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary parent of the account, as designated by the Account Hierarchy. The primary parent must be a business account.</description>
    <label>Primary Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Primary Parent</relationshipLabel>
    <relationshipName>Primary_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>