force-app/main/default/objects/Account/fields/Regional_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Regional_Strategy__c</fullName>
    <description>Regional Strategy of this account.  Used by MCO accounts.</description>
    <label>Regional Strategy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>