force-app/main/default/objects/Account/fields/Restricted_Products_vod__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Products_vod__c</fullName>
    <description>Used to prevent a user from detailing and sampling a product that the Physician should not be allowed to receive. Format of field value: Double semi-colon delimited list of Product Names. These will be textual Product Catalog records of type = Detail. For example, Cholecap;;Labrinone.</description>
    <label>Restricted Products</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>