force-app/main/default/objects/Account/fields/Sample_Default_vod__c.field-meta.xml
<CustomField>
    <fullName>Sample_Default_vod__c</fullName>
    <description>Double semi-colon delimited list of samples to default on a new or planned call.
The value is formatted as follows: [Textual String of Sample]::[Default Quantity];;
For example, Cholecap 10mg::1;;Cholecap 20mg::2;;Cholecap 30mg::2</description>
    <label>Sample Default</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>