force-app/main/default/objects/Account/fields/Segmentations_vod__c.field-meta.xml
<CustomField>
    <fullName>Segmentations_vod__c</fullName>
    <description>Comma separated list of the Exploria segmentations associated with this account.</description>
    <label>Segmentations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>