force-app/main/default/objects/Account/fields/Signature_Page_Display_Name_vod__c.field-meta.xml
<CustomField>
    <fullName>Signature_Page_Display_Name_vod__c</fullName>
    <description>Formula field used to display a well formatted display name for an Account on the Call Signature page (Title, Last Name, First Name, Suffix, Credentials, Specialty).</description>
    <formula>TEXT(Salutation) &amp; &quot; &quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot;, &quot; &amp; TEXT(Credentials_vod__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Page Display Name</label>
    <type>Text</type>
</CustomField>