force-app/main/default/objects/Account/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this professional is a speaker.  Used by person accounts.</description>
    <label>Speaker?</label>
    <type>Checkbox</type>
</CustomField>