force-app/main/default/objects/Account/fields/Specialty_1_vod__c.field-meta.xml
<CustomField>
    <fullName>Specialty_1_vod__c</fullName>
    <description>Picklist of the professional&#39;s specialty. Edit the picklist to change the available values.  Used by HMS data load.</description>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Family Medicine</fullName>
            </value>
            <value>
                <fullName>General Practice</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>REMOVE THIS LOV</fullName>
            </value>
            <value>
                <fullName>Abdominal Radiology</fullName>
            </value>
            <value>
                <fullName>Abdominal Surgery</fullName>
            </value>
            <value>
                <fullName>Acupuncture</fullName>
            </value>
            <value>
                <fullName>Acute Care</fullName>
            </value>
            <value>
                <fullName>Acute Care Pediatrics (APNs only)</fullName>
            </value>
            <value>
                <fullName>Addiction Medicine</fullName>
            </value>
            <value>
                <fullName>Addiction Psychiatry</fullName>
            </value>
            <value>
                <fullName>Addiction Psychology &amp; Counseling</fullName>
            </value>
            <value>
                <fullName>Administrative Medicine</fullName>
            </value>
            <value>
                <fullName>Adolescent Medicine (Family Medicine)</fullName>
            </value>
            <value>
                <fullName>Adolescent Medicine (Internal Medicine)</fullName>
            </value>
            <value>
                <fullName>Adolescent Medicine (Pediatrics)</fullName>
            </value>
            <value>
                <fullName>Adult Cardiothoracic Anesthesiology (Residents Only)</fullName>
            </value>
            <value>
                <fullName>Adult Congenital Heart Disease (Internal Medicine)</fullName>
            </value>
            <value>
                <fullName>Adult Health (APNs)</fullName>
            </value>
            <value>
                <fullName>Adult Reconstructive Orthopedics</fullName>
            </value>
            <value>
                <fullName>Advanced Heart Failure</fullName>
            </value>
            <value>
                <fullName>Advanced Heart Failure &amp; Transplant Cardiology</fullName>
            </value>
            <value>
                <fullName>Advanced Practice Dentistry</fullName>
            </value>
            <value>
                <fullName>Advanced Surgical Oncology</fullName>
            </value>
            <value>
                <fullName>Aerospace Medicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>