force-app/main/default/objects/Account/fields/Specialty_2_vod__c.field-meta.xml
<CustomField>
    <fullName>Specialty_2_vod__c</fullName>
    <description>Picklist of the professional&#39;s alternate specialty. Edit the picklist to change the available values.  Used by HMS data load.</description>
    <label>Specialty 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Family Medicine</fullName>
            </value>
            <value>
                <fullName>General Practice</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>