force-app/main/default/objects/Account/fields/Spend_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spend_Amount__c</fullName>
    <description>This field can be used by Spend_Status_Value_vod__c to determine the aggregate spend threshold.</description>
    <label>Spend Amount</label>
    <length>128</length>
    <type>Text</type>
</CustomField>