force-app/main/default/objects/Account/fields/Spend_Status_Value_vod__c.field-meta.xml
<CustomField>
    <fullName>Spend_Status_Value_vod__c</fullName>
    <description>Adjust this formula field to specify an account&#39;s spend status (using Veeva constants) based on customer-defined criteria.  This drives the image displayed in Spend_Status_vod.</description>
    <formula>IF(Spend_Amount__c  = &quot;Below Monitoring Threshold&quot;, &quot;Below_Threshold_vod&quot;, IF(Spend_Amount__c  = &quot;Monitor Spend&quot;, &quot;Monitor_vod&quot;, IF(Spend_Amount__c  = &quot;Cease Spend&quot;, &quot;Cease_vod&quot;, &quot;Invalid_vod&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Status Value</label>
    <type>Text</type>
</CustomField>