force-app/main/default/objects/Account/fields/Spend_Status_vod__c.field-meta.xml
<CustomField>
    <fullName>Spend_Status_vod__c</fullName>
    <description>Displays red, yellow, or green image based on Spend_Status_Value_vod__c.</description>
    <formula>CASE(Spend_Status_Value_vod__c, &quot;Below_Threshold_vod&quot;, IMAGE(&quot;/resource/vod_green_circle&quot;, &quot;Below Monitoring Threshold&quot;), &quot;Monitor_vod&quot;, IMAGE(&quot;/resource/vod_yellow_triangle&quot;, &quot;Monitor Spend&quot;), &quot;Cease_vod&quot;, IMAGE(&quot;/resource/vod_red_square&quot;, &quot;Cease Spend&quot;), IMAGE(&quot;/resource/vod_green_circle&quot;, &quot;Below Monitoring Threshold&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Status</label>
    <type>Text</type>
</CustomField>