force-app/main/default/objects/Account/fields/Suffix_vod__c.field-meta.xml
<CustomField>
    <fullName>Suffix_vod__c</fullName>
    <description>Suffix.  Used for person accounts.</description>
    <label>Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>