force-app/main/default/objects/Account/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this account is a target.</description>
    <label>Target?</label>
    <type>Checkbox</type>
</CustomField>