force-app/main/default/objects/Account/fields/Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Status__c</fullName>
    <description>Tax status at the account.  Used by MCO and MCO Plan accounts.</description>
    <label>Tax Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>