force-app/main/default/objects/Account/fields/Territory_Test_vod__c.field-meta.xml
<CustomField>
    <fullName>Territory_Test_vod__c</fullName>
    <description>Territory test field that contains a semicolon separated list of territories. This field is normally filled in using the VoD territory utilities page and is used to determine what the account/territory mappings will be.</description>
    <label>Territory Test VoD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>