force-app/main/default/objects/Account/fields/Total_Lives__c.field-meta.xml
<CustomField>
    <fullName>Total_Lives__c</fullName>
    <description>Total # Lives.  Used by MCO and MCO Plan accounts.</description>
    <label>Total # Lives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>