force-app/main/default/objects/Account/fields/Total_MDs_DOs__c.field-meta.xml
<CustomField>
    <fullName>Total_MDs_DOs__c</fullName>
    <description>Total # MDs/DOs at this account.  Used by Practice and Hospital type accounts.  Included in HMS data load.</description>
    <label>Total # MDs/DOs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>