force-app/main/default/objects/Account/fields/Total_Pharmacists__c.field-meta.xml
<CustomField>
    <fullName>Total_Pharmacists__c</fullName>
    <description>Total # Pharmacists.  Used for Pharmacy and Hospital type accounts</description>
    <label>Total # Pharmacists</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>