force-app/main/default/objects/Account/fields/Total_Physicians_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_Physicians_Enrolled__c</fullName>
    <description>Total # Physicians enrolled.  Used for MCO and MCO Plan accounts.</description>
    <label>Total # Physicians Enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>