force-app/main/default/objects/Account/fields/Total_Revenue_000__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_000__c</fullName>
    <description>Total Revenue in thousands.  Used by MCO and MCO Plan accounts</description>
    <label>Total Revenue (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>