force-app/main/default/objects/Account/fields/Total_Sent_Message_vod__c.field-meta.xml
<CustomField>
    <fullName>Total_Sent_Message_vod__c</fullName>
    <description>The number of the messages have been sent</description>
    <label>Total Sent Message</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>