force-app/main/default/objects/Account/fields/Union_Id_vod__c.field-meta.xml
<CustomField>
    <fullName>Union_Id_vod__c</fullName>
    <description>Store HCP&#39;s UnionID</description>
    <label>Union ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>