force-app/main/default/objects/Account/fields/VeevaID_vod__c.field-meta.xml
<CustomField>
    <fullName>VeevaID_vod__c</fullName>
    <description>This field holds the global Veeva ID.</description>
    <externalId>true</externalId>
    <label>Veeva ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>