force-app/main/default/objects/Account/fields/zvod_Account_QRcode_vod__c.field-meta.xml
<CustomField>
    <fullName>zvod_Account_QRcode_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marker field for the QR code in the account page layout</description>
    <label>zvod_Account_QRcode</label>
    <type>Checkbox</type>
</CustomField>