force-app/main/default/objects/Account/recordTypes/Board_vod.recordType-meta.xml
<RecordType>
    <fullName>Board_vod</fullName>
    <active>true</active>
    <description>Board Memberships</description>
    <label>Board_vod</label>
</RecordType>