force-app/main/default/objects/Account/recordTypes/BOT_ACO.recordType-meta.xml
<RecordType>
    <fullName>BOT_ACO</fullName>
    <active>true</active>
    <description>(BOT) To store ACO&#39;s.</description>
    <label>BOT ACO</label>
</RecordType>